update: EnrollmentDTO